# pyproject.toml

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

###############################################################################
# PROJECT METADATA
###############################################################################
[project]
name = "fuelsync"
version = "0.1.0"
authors = [{ name = "Andrew Jordan", email = "andrewjordan3@gmail.com" }]
description = "A robust, type-safe Python client for the WEX EFS SOAP API"
readme = "README.md"
license = "MIT" # SPDX identifier (PEP 639)
license-files = ["LICENSE"] # Point to the actual license file
requires-python = ">=3.11"
keywords = [
    "wex",
    "efs",
    "fuel",
    "soap",
    "api",
    "transactions",
    "fleet",
    "fuel-cards",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # Removed the License classifier since we're using SPDX identifier
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "jinja2>=3.1.0",
]

# Optional dependencies
[project.optional-dependencies]
# Data analysis tools
pandas = ["pandas>=2.0.0"]

# Development tools
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",
]

# All optional dependencies
all = ["fuelsync[pandas]", "fuelsync[dev]"]

[project.urls]
Homepage = "https://github.com/andrewjordan3/FuelSync"
Repository = "https://github.com/andrewjordan3/FuelSync"
Issues = "https://github.com/andrewjordan3/FuelSync/issues"
Documentation = "https://github.com/andrewjordan3/FuelSync#readme"

###############################################################################
# PACKAGE DISCOVERY
###############################################################################
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
fuelsync = ["config/config.yaml", "templates/*.xml"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fuelsync*"]
exclude = ["tests*", "docs*"]

###############################################################################
# RUFF - LINTING AND FORMATTING
###############################################################################
[tool.ruff]
line-length = 88
target-version = "py311"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "PL",  # pylint
    "RUF", # ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by ruff format)
    "E203",    # Whitespace before ':' (conflicts with formatter)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fuelsync"]

###############################################################################
# MYPY - TYPE CHECKING
###############################################################################
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for third-party packages without type stubs
[[tool.mypy.overrides]]
module = ["lxml.*", "truststore.*"]
ignore_missing_imports = true

###############################################################################
# PYTEST - TESTING
###############################################################################
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=fuelsync",
    "--cov-report=term-missing",
    "--cov-report=html",
]

###############################################################################
# COVERAGE
###############################################################################
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
